Colaboratory を使用して作成しました

--- a/newYutaiStrat.ipynb
+++ b/newYutaiStrat.ipynb
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "QOAvBGrPIfzv"
       },
@@ -66,7 +66,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -114,6 +114,21 @@
       ],
       "source": [
         "from google import colab\n",
+        "\n",
+        "def profitCal(sellPriceList,buyPriceList,multiplierList,betaList,hedgeFlag,sellHedgePrice,buyHedgePrice):,\n",
+        "        profit = 0,\n",
+        "        hedgeAmt = 0,\n",
+        "        for s,b,m in zip(sellPriceList,buyPriceList,multiplierList):,\n",
+        "          profit += (s-b)*m,\n",
+        "        for be,bp,m in zip(betaList,buyPriceList,multiplierList):,\n",
+        "          hedgeAmt += bp * be * m,\n",
+        "           print (\\\"hedgeAmt\\\"+str(hedgeAmt)),\n",
+        "          hedgeProfit = (sellHedgePrice - buyHedgePrice) * int(round(hedgeAmt/buyHedgePrice*100,-2)),\n",
+        "          print (\\\"profit\\\"+str(profit))\\n\",\n",
+        "          print (\\\"hedgeProfit\\\"+str(hedgeProfit))\\n\",\n",
+        "          return profit+hedgeProfit\\n\",\n",
+        "\n",
+        "\n",
         "def getPrice(label,timeStr,col):\n",
         "  print (label)\n",
         "  print (timeStr)\n",
@@ -129,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -153,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -235,74 +250,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 516
-        },
-        "id": "yDEqZrdl2fWU",
-        "outputId": "ae15b241-efd2-449c-9953-78976f533117"
+        "id": "yDEqZrdl2fWU"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2702.T\n",
-            "2018-06-26\n",
-            "Open\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:yfinance:price-repair-100x: Cannot check single-row table for 100x price errors\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\r[*********************100%***********************]  1 of 1 completed\n",
-            "              Open    High     Low   Close    Adj Close   Volume  Repaired?\n",
-            "Date                                                                       \n",
-            "2018-06-26  5720.0  5750.0  5650.0  5690.0  5461.079102  1319900      False\n",
-            "2702.T\n",
-            "2018-04-24\n",
-            "Open\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:yfinance:price-repair-100x: Cannot check single-row table for 100x price errors\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\r[*********************100%***********************]  1 of 1 completed\n",
-            "              Open    High     Low   Close    Adj Close  Volume  Repaired?\n",
-            "Date                                                                      \n",
-            "2018-04-24  5160.0  5170.0  5120.0  5150.0  4942.804688  103000      False\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-12-e4fb1500e735>\u001b[0m in \u001b[0;36m<cell line: 5>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     23\u001b[0m           \u001b[0mbetaList\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0myfinance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mTicker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\".T\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'beta'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     24\u001b[0m           \u001b[0mmultiplier\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mround\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbudgetPerLabel\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mbuyPrice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 25\u001b[0;31m           \u001b[0mmultiplierList\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     26\u001b[0m           \u001b[0mlongPosList\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuyPrice\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0mmultiplier\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m     \u001b[0mprofitCal\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msellPriceList\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mbuyPriceList\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmultiplierList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: list.append() takes exactly one argument (0 given)"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "budget = 30000000\n",
@@ -329,19 +281,16 @@
         "          buyPriceList.append(buyPrice)\n",
         "          betaList.append(yfinance.Ticker(l+\".T\").info.get('beta'))\n",
         "          multiplier = int(round(budgetPerLabel/buyPrice, -2))\n",
-        "          multiplierList.append(multiplier)\n",
-        "          sellHedgePrice = getPrice(\"^N225\",dateList[-3],\"Open\")\n",
-        "          buyHedgePrice = getPrice(\"^N225\",dateList[-1],\"Open\")\n",
-        "        profit += (profitCal(sellPriceList,buyPriceList,multiplierList,betaList,hedgeFlag,sellHedgePrice,buyHedgePrice))\n",
-        "print (profit)\n",
-        "\n"
+        "          multiplierList.append()\n",
+        "          longPosList.append(buyPrice * multiplier)\n",
+        "    profitCal(sellPriceList,buyPriceList,multiplierList)\n"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPTBsja6BLFKki+8Ma5o8qz",
+      "authorship_tag": "ABX9TyOh8KYLQX/TCbbpVbOz1ktN",
       "include_colab_link": true
     },
     "kernelspec": {
