Colaboratory を使用して作成しました

--- a/newYutaiStrat.ipynb
+++ b/newYutaiStrat.ipynb
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "QOAvBGrPIfzv"
       },
@@ -66,13 +66,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ah7BgVKiuJGH",
-        "outputId": "dbcb9841-bd7a-4972-8f42-3b4d0b5659e8"
+        "outputId": "4d74fad3-723a-40ab-d3a5-2f1f702a794b"
       },
       "outputs": [
         {
@@ -96,9 +96,9 @@
           "name": "stdout",
           "text": [
             "\r[*********************100%***********************]  1 of 1 completed\n",
-            "              Open    High     Low   Close    Adj Close   Volume  Repaired?\n",
-            "Date                                                                       \n",
-            "2018-06-26  5720.0  5750.0  5650.0  5690.0  5461.079102  1319900      False\n"
+            "              Open    High     Low   Close   Adj Close   Volume  Repaired?\n",
+            "Date                                                                      \n",
+            "2018-06-26  5720.0  5750.0  5650.0  5690.0  5461.07959  1319900      False\n"
           ]
         },
         {
@@ -109,24 +109,24 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 3
         }
       ],
       "source": [
         "from google import colab\n",
         "\n",
-        "def profitCal(sellPriceList,buyPriceList,multiplierList,betaList,hedgeFlag,sellHedgePrice,buyHedgePrice):,\n",
-        "        profit = 0,\n",
-        "        hedgeAmt = 0,\n",
-        "        for s,b,m in zip(sellPriceList,buyPriceList,multiplierList):,\n",
-        "          profit += (s-b)*m,\n",
-        "        for be,bp,m in zip(betaList,buyPriceList,multiplierList):,\n",
-        "          hedgeAmt += bp * be * m,\n",
-        "           print (\\\"hedgeAmt\\\"+str(hedgeAmt)),\n",
-        "          hedgeProfit = (sellHedgePrice - buyHedgePrice) * int(round(hedgeAmt/buyHedgePrice*100,-2)),\n",
-        "          print (\\\"profit\\\"+str(profit))\\n\",\n",
-        "          print (\\\"hedgeProfit\\\"+str(hedgeProfit))\\n\",\n",
-        "          return profit+hedgeProfit\\n\",\n",
+        "def profitCal(sellPriceList,buyPriceList,multiplierList,betaList,hedgeFlag,sellHedgePrice,buyHedgePrice):\n",
+        "        profit = 0\n",
+        "        hedgeAmt = 0\n",
+        "        for s,b,m in zip(sellPriceList,buyPriceList,multiplierList):\n",
+        "          profit += (s-b)*m\n",
+        "        for be,bp,m in zip(betaList,buyPriceList,multiplierList):\n",
+        "          hedgeAmt += bp * be * m\n",
+        "          print (\"hedgeAmt\"+str(hedgeAmt))\n",
+        "          hedgeProfit = (sellHedgePrice - buyHedgePrice) * int(hedgeAmt/(buyHedgePrice*100))*100\n",
+        "          print (\"profit\"+str(profit))\n",
+        "          print (\"hedgeProfit\"+str(hedgeProfit))\n",
+        "          return profit+hedgeProfit\n",
         "\n",
         "\n",
         "def getPrice(label,timeStr,col):\n",
@@ -144,20 +144,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "GPJL7w3rlvRV",
-        "outputId": "7fbb0e72-e80f-42b9-c4a7-8a7451052fce"
+        "outputId": "752c1dd2-19ec-49da-f33b-bec8013a5791"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ]
         }
       ],
@@ -168,23 +168,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TBMcHTx1LxD9",
-        "outputId": "f160a212-6dd2-466a-97be-d3010c878074"
+        "outputId": "73698bc3-d580-46fc-bf61-5117aea51398"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "/content\n",
-            "2702.T\n",
-            "2018-06-26\n",
-            "Open\n"
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 1.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package w3m.\n",
+            "(Reading database ... 129824 files and directories currently installed.)\n",
+            "Preparing to unpack .../w3m_0.5.3+git20210102-6ubuntu0.1_amd64.deb ...\n",
+            "Unpacking w3m (0.5.3+git20210102-6ubuntu0.1) ...\n",
+            "Setting up w3m (0.5.3+git20210102-6ubuntu0.1) ...\n",
+            "Processing triggers for man-db (2.10.2-1) ...\n",
+            "/content\n"
           ]
         },
         {
@@ -198,6 +208,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "2702.T\n",
+            "2018-06-26\n",
+            "Open\n",
             "\r[*********************100%***********************]  1 of 1 completed\n",
             "              Open    High     Low   Close    Adj Close   Volume  Repaired?\n",
             "Date                                                                       \n",
@@ -221,7 +234,7 @@
             "\r[*********************100%***********************]  1 of 1 completed\n",
             "              Open    High     Low   Close    Adj Close  Volume  Repaired?\n",
             "Date                                                                      \n",
-            "2018-04-24  5160.0  5170.0  5120.0  5150.0  4942.804688  103000      False\n",
+            "2018-04-24  5160.0  5170.0  5120.0  5150.0  4942.804199  103000      False\n",
             "560.0\n"
           ]
         }
@@ -250,15 +263,114 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
-        "id": "yDEqZrdl2fWU"
+        "id": "yDEqZrdl2fWU",
+        "outputId": "e1f0269a-a0c1-4fdf-eb20-6866c63c54a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:yfinance:price-repair-100x: Cannot check single-row table for 100x price errors\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2702.T\n",
+            "2018-06-26\n",
+            "Open\n",
+            "\r[*********************100%***********************]  1 of 1 completed"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:yfinance:price-repair-100x: Cannot check single-row table for 100x price errors\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "              Open    High     Low   Close   Adj Close   Volume  Repaired?\n",
+            "Date                                                                      \n",
+            "2018-06-26  5720.0  5750.0  5650.0  5690.0  5461.07959  1319900      False\n",
+            "2702.T\n",
+            "2018-04-24\n",
+            "Open\n",
+            "\r[*********************100%***********************]  1 of 1 completed\n",
+            "              Open    High     Low   Close    Adj Close  Volume  Repaired?\n",
+            "Date                                                                      \n",
+            "2018-04-24  5160.0  5170.0  5120.0  5150.0  4942.804688  103000      False\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:yfinance:price-repair-100x: Cannot check single-row table for 100x price errors\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "^N225\n",
+            "2018-04-24\n",
+            "Open\n",
+            "\r[*********************100%***********************]  1 of 1 completed\n",
+            "                    Open          High           Low         Close  \\\n",
+            "Date                                                                 \n",
+            "2018-04-24  22228.820312  22304.689453  22149.589844  22278.119141   \n",
+            "\n",
+            "               Adj Close    Volume  Repaired?  \n",
+            "Date                                           \n",
+            "2018-04-24  22278.119141  76500000      False  \n",
+            "^N225\n",
+            "2018-06-26\n",
+            "Open\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:yfinance:price-repair-100x: Cannot check single-row table for 100x price errors\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\r[*********************100%***********************]  1 of 1 completed\n",
+            "                    Open          High           Low    Close  Adj Close  \\\n",
+            "Date                                                                       \n",
+            "2018-06-26  22160.330078  22368.779297  22104.119141  22342.0    22342.0   \n",
+            "\n",
+            "              Volume  Repaired?  \n",
+            "Date                             \n",
+            "2018-06-26  71300000      False  \n",
+            "hedgeAmt4734430.032\n",
+            "profit3248000.0\n",
+            "hedgeProfit13698.046875\n",
+            "3261698.046875\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "budget = 30000000\n",
         "profit = 0\n",
+        "hedgeFlag = 1\n",
         "\n",
         "\n",
         "with open(\"drive/MyDrive/trades/5YrYutaiMini.txt\") as labelDateFile:\n",
@@ -281,16 +393,19 @@
         "          buyPriceList.append(buyPrice)\n",
         "          betaList.append(yfinance.Ticker(l+\".T\").info.get('beta'))\n",
         "          multiplier = int(round(budgetPerLabel/buyPrice, -2))\n",
-        "          multiplierList.append()\n",
-        "          longPosList.append(buyPrice * multiplier)\n",
-        "    profitCal(sellPriceList,buyPriceList,multiplierList)\n"
+        "          multiplierList.append(multiplier)\n",
+        "          sellHedgePrice = getPrice(\"^N225\",dateList[-3],\"Open\")\n",
+        "          buyHedgePrice = getPrice(\"^N225\",dateList[-1],\"Open\")\n",
+        "          profit += (profitCal(sellPriceList,buyPriceList,multiplierList,betaList,hedgeFlag,sellHedgePrice,buyHedgePrice))\n",
+        "    print (profit)\n",
+        "\n"
       ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOh8KYLQX/TCbbpVbOz1ktN",
+      "authorship_tag": "ABX9TyMGcBq+TOqg8xzQ1C9PUH5A",
       "include_colab_link": true
     },
     "kernelspec": {
